--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
     "konva": "^8.4.2",
     "vue": "^3.2.45",
     "vuetify": "^3.1.6"
