--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@mdi/font": "^7.1.96",
     "konva": "^8.4.2",
     "vue": "^3.2.45",
-    "vuetify": "^3.1.6"
+    "vuetify": "^3.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
