--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.1.96",
     "konva": "^8.4.2",
+    "mathjs": "^11.6.0",
     "vue": "^3.2.45",
     "vuetify": "^3.1.6",
     "zod": "^3.21.4"
